# aisg_eval

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  part1.ipynb  pyproject.toml
configs/: part1_cometkiwi.json  part1_qwen3vl_judge.json  part1_sealion_api_gemma_generate.json  part1_sealion_api_qwen_judge.json  part1_sealion_api_qwen_judge_flagged.json  part1_sealion_qwen_generator.json
data/: translation_eval_ind.jsonl  translation_eval_ind_cometkiwi.jsonl  translation_eval_ind_judge_sealion_qwen.jsonl  translation_eval_ind_manifest.json  translation_eval_ind_qa.jsonl
data2/: translation_eval_ind.jsonl  translation_eval_ind_manifest.json  translation_eval_ind_qa.jsonl
scripts/part1/: __init__.py  prepare_translation_dataset.py
scripts/part1/clients/: __init__.py  model_clients.py  sea_lion_client.py
scripts/part1/config/: __init__.py  data_object.py  loader.py
scripts/part1/dataset/: __init__.py  sampling.py
scripts/part1/evaluation/: __init__.py  qa.py
scripts/part1/pipeline/: __init__.py  orchestration.py
scripts/part1/translation/: __init__.py  generation.py
scripts/part1/utils/: __init__.py  io.py  text.py
scripts/part2/: __init__.py  evaluate_translation_model.py
scripts/part2/config/: __init__.py  data_object.py
scripts/part2/inference/: __init__.py  hf_translator.py
scripts/part2/metrics/: __init__.py  judge.py  metricx.py  overlap.py
scripts/part2/pipeline/: __init__.py  orchestration.py
scripts/part2/utils/: __init__.py  io.py  text.py
