[project]
name = "aisg-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "httpx>=0.28.1",
    "huggingface-hub[cli]>=1.14.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.6",
]

[project.optional-dependencies]
cometkiwi = [
    "unbabel-comet>=2.2.7",
]
qwen3vl = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "qwen-vl-utils>=0.0.14",
    "transformers>=4.57.3",
]
