[project]
name = "aisg-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets>=4.8.5",
    "httpx>=0.28.1",
    "huggingface-hub[cli]>=0.34.0,<1.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.6",
]

[project.optional-dependencies]
cometkiwi = [
    "unbabel-comet>=2.2.7",
]
qwen3vl = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "qwen-vl-utils>=0.0.14",
    "transformers>=4.57.3",
]
part2 = [
    "accelerate>=1.12.0",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "prek>=0.4.0",
    "ty>=0.0.36",
]

[tool.ty.environment]
python-version = "3.11"
root = ["."]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "metricx24",
    "sacrebleu",
    "sacrebleu.**",
    "qwen_vl_utils",
    "torch",
    "transformers",
    "transformers.**",
]

[tool.ty.src]
include = ["scripts"]

[tool.ty.terminal]
output-format = "concise"
